--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="Entregable8.styles.css" rel="stylesheet" />
+    <link href="M5-Actividad-8-GitHub-Actions.styles.css" rel="stylesheet" />
 </head>
 
 <body>
